# lrs

./: .gitignore  Makefile  README.md
haskell/: flake.nix  lrs.cabal
haskell/src/: AppMain.hs
haskell/src/LRS/: Search.hs  SuffixArray.hs  SuffixTree.hs
haskell/test/: LRSSpec.hs  TestMain.hs
haskell/test-data/: single.txt
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  search.rs  suffix_array.rs  suffix_tree.rs
rust/tests/: lrs_tests.rs
test-data/: short.txt
test-data/project/lib/: delta.txt  gamma.txt
test-data/project/src/: alpha.txt  beta.txt
test-suite/: run-tests.sh
test-suite/data/: dedup-count.txt  multi-repeat.txt  overlap.txt  whitespace.txt
test-suite/data/dir/: four.txt  one.txt  three.txt  two.txt
