cabal-version:      3.0
name:               lrs
version:            0.1.0.0
synopsis:           Find longest repeated substrings using suffix arrays
license:            BSD-3-Clause
author:             Doug Beardsley
maintainer:         mightybyte@gmail.com
copyright:          Doug Beardsley
build-type:         Simple

common shared
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -O2
  default-extensions:
    BangPatterns
    OverloadedStrings
    ScopedTypeVariables

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
    AppMain
    LRS.SuffixArray
    LRS.Search
  build-depends:
    base >= 4.20,
    array,
    binary,
    bytestring,
    cryptohash-sha256,
    text,
    containers,
    directory,
    filepath,
    optparse-applicative,
    vector

executable lrs
  import:           shared
  hs-source-dirs:   exe
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts
  build-depends:
    base >= 4.20,
    lrs

test-suite tests
  import:           shared
  main-is:          TestMain.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts
  build-depends:
    base >= 4.20,
    lrs,
    hspec,
    text
  other-modules:
    LRSSpec
